--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,3 +100,19 @@
     @apply font-heading;
   }
 }
+
+@utility bg-lattice {
+  background-color: var(--background);
+  background-image:
+    linear-gradient(to right, #80808033 1px, transparent 1px),
+    linear-gradient(to bottom, #80808033 1px, transparent 1px);
+  background-size: 30px 30px;
+}
+
+@utility bg-secondary-lattice {
+  background-color: var(--secondary-background);
+  background-image:
+    linear-gradient(to right, #80808033 1px, transparent 1px),
+    linear-gradient(to bottom, #80808033 1px, transparent 1px);
+  background-size: 30px 30px;
+}
