--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,50 +4,38 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --border-radius: 5px;
-  --box-shadow-x: 4px;
-  --box-shadow-y: 4px;
-  --reverse-box-shadow-x: -4px;
-  --reverse-box-shadow-y: -4px;
-
-  --heading-font-weight: 700;
-  --base-font-weight: 500;
-
-  --background: oklch(93.46% 0.0304 254.32);
+  --background: oklch(94.11% 0.036556 308.0303);
   --secondary-background: oklch(100% 0 0);
   --foreground: oklch(0% 0 0);
   --main-foreground: oklch(0% 0 0);
-
-  --main: oklch(67.47% 0.1725 259.61);
+  --main: oklch(71.9% 0.198 310.03);
   --border: oklch(0% 0 0);
   --ring: oklch(0% 0 0);
   --overlay: oklch(0% 0 0 / 0.8);
-
-  --shadow: var(--box-shadow-x) var(--box-shadow-y) 0px 0px var(--border);
-
-  --chart-1: oklch(67.47% 0.1726 259.49);
-  --chart-2: oklch(67.28% 0.2147 24.22);
-  --chart-3: oklch(86.03% 0.176 92.36);
-  --chart-4: oklch(79.76% 0.2044 153.08);
-  --chart-5: oklch(66.34% 0.1806 277.2);
-
-  --destructive: oklch(57.7% 0.245 27.325);
-  --destructive-foreground: oklch(100% 0 0);
+  --shadow: 4px 4px 0px 0px var(--border);
+  --chart-1: #CA7AFF;
+  --chart-2: #FACC00;
+  --chart-3: #00D696;
+  --chart-4: #FF7A05;
+  --chart-5: #0099FF;
+  --chart-active-dot: #000;
 }
 
 .dark {
-  --background: oklch(29.12% 0.0633 270.86);
+  --background: oklch(29.68% 0.0791 315.62);
   --secondary-background: oklch(23.93% 0 0);
   --foreground: oklch(92.49% 0 0);
   --main-foreground: oklch(0% 0 0);
-
+  --main: oklch(67.34% 0.2314 309.13);
   --border: oklch(0% 0 0);
   --ring: oklch(100% 0 0);
-
-  --shadow: var(--box-shadow-x) var(--box-shadow-y) 0px 0px var(--border);
-
-  --destructive: oklch(70.4% 0.191 22.216);
-  --destructive-foreground: oklch(100% 0 0);
+  --shadow: 4px 4px 0px 0px var(--border);
+  --chart-1: #D494FF;
+  --chart-2: #E0B700;
+  --chart-3: #00BD84;
+  --chart-4: #EB6D00;
+  --chart-5: #008AE5;
+  --chart-active-dot: #fff;
 }
 
 @theme inline {
@@ -59,38 +47,27 @@
   --color-border: var(--border);
   --color-overlay: var(--overlay);
   --color-ring: var(--ring);
-  --color-destructive: var(--destructive);
-  --color-destructive-foreground: var(--destructive-foreground);
-
   --color-chart-1: var(--chart-1);
   --color-chart-2: var(--chart-2);
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
 
-  --spacing-boxShadowX: var(--box-shadow-x);
-  --spacing-boxShadowY: var(--box-shadow-y);
-  --spacing-reverseBoxShadowX: var(--reverse-box-shadow-x);
-  --spacing-reverseBoxShadowY: var(--reverse-box-shadow-y);
-
-  --radius-base: var(--border-radius);
-
+  --spacing-boxShadowX: 4px;
+  --spacing-boxShadowY: 4px;
+  --spacing-reverseBoxShadowX: -4px;
+  --spacing-reverseBoxShadowY: -4px;
+  --radius-base: 5px;
   --shadow-shadow: var(--shadow);
-
-  --font-weight-base: var(--base-font-weight);
-  --font-weight-heading: var(--heading-font-weight);
-
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-weight-base: 500;
+  --font-weight-heading: 700;
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
   body {
-    @apply bg-background text-foreground font-base;
+    @apply text-foreground font-base bg-background;
   }
+
   h1,
   h2,
   h3,
